j--/tests/pass/LShiftAssign.java
package pass;

public class LShiftAssign {
	public int eval(int a, int b) {
		a <<= b;
		return a;
	}
}
