j--/tests/fail/LShiftAssign.java
package fail;

public class LShiftAssign {

	public static void main(String args[]) {
		System.out.println("c" <<= "b");
	}

}
